# indicator-extractor

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: http.rs  indicator_extractor.d.ts  lib.rs  wasm.rs
src/data/: mod.rs  pdf.rs  website.rs
src/parser/: bitcoin.rs  helpers.rs  mod.rs
