[package]
authors = ["Benoît Jeaurond <benoit@jeaurond.dev"]
description = "Extract indicators (IP, domain, email, hashes, etc.) from a string or a PDF file"
edition = "2021"
license = "MIT"
name = "indicator-extractor"
repository = "https://github.com/BenJeau/indicator-extractor"
version = "0.1.2"

[dependencies]
console_error_panic_hook = "0.1.7"
nom = "7.1.3"
pdf-extract = { version = "0.7.0" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
tldextract = "0.6.0"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
