[package]
authors = ["Benoît Jeaurond <benoit@jeaurond.dev"]
description = "Extract indicators (IP, domain, email, hashes, etc.) from a string or a PDF file"
edition = "2021"
license = "MIT"
name = "indicator-extractor"
repository = "https://github.com/BenJeau/indicator-extractor"
version = "0.2.0"

[dependencies]
bech32 = "0.11.0"
bs58 = "0.5.1"
nom = "7.1.3"
pdf-extract = "0.7.9"
serde = { version = "1.0.209", features = ["derive"] }
sha2 = "0.10.8"
tldextract = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2.10.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.70"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ['Blob', 'Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window', 'console'] }

[lib]
crate-type = ["cdylib", "rlib"]
